--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="lib" path="D:/University Stuff/Adv. Prog/Assign1/jackson-core-2.8.4.jar"/>
 	<classpathentry kind="lib" path="D:/University Stuff/Adv. Prog/Assign1/jackson-databind-2.8.4.jar"/>
 	<classpathentry kind="lib" path="D:/University Stuff/Adv. Prog/Assign1/jackson-annotations-2.8.4.jar"/>
+	<classpathentry kind="lib" path="D:/University Stuff/Adv. Prog/Assign1/jgrapht.jar"/>
+	<classpathentry kind="lib" path="D:/University Stuff/Adv. Prog/Assign1/jgraph.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
